--- a/user.css
+++ b/user.css
@@ -2,9 +2,10 @@
 body{
     background-image: url(Resources/Background.png);
     background-size: 1920px, 1080px;
+    background-attachment: fixed;
 }
 .All{
-    height: 500px;
+    height: 450px;
     width: 500px;
     background-color: white;
     margin: auto;
@@ -16,11 +17,13 @@ body{
 
 img{
     margin-top: 40px;
-width: 200px;
-height: 200px;
+    width: 200px;
+    height: 200px;
 }
 
 .bt {
+    grid-row: 3;
+    grid-column: 1 / 2;
     background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
     border-radius: 8px;
     border-style: none;
@@ -54,3 +57,80 @@ height: 200px;
       padding: 0 2.6rem;
     }
   }
+
+  .msg{
+    height: 300px;
+    width: 500px;
+    background-color: white;
+    margin: auto;
+    margin-top: 50px;
+    font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+    color:#455EB5;
+    display: grid;
+    grid-template-columns: 20% 80%;
+    grid-template-rows: 30% 70%;
+    text-align: left;
+    
+  }
+
+  .comment{
+    height: 500px;
+    width: 500px;
+    background-color: white;
+    margin: auto;
+    margin-top: 50px;
+    font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+    color:#455EB5;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 15% 65% 20%;
+    text-align: left;
+    
+  }
+
+  .mpg{
+    grid-row-start: 2;
+    grid-row-end:2;
+    grid-column-start: 1;
+    grid-column-end: -1;
+    margin-left: 5%;
+    font-weight: bold;
+}
+  .img{
+    grid-row: 1;
+    width: 45px;
+    height: 45px;
+    margin: auto;
+  }
+
+  textarea {
+    grid-row: 2;
+    grid-column: 1 / 2;
+    margin: auto;
+    width: 90%;
+    height: 90%;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #455EB5;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+    font-size: 16px;
+    resize: none;
+    
+  }
+
+  textarea:focus { 
+    outline: none !important;
+    border-color: #719ECE;
+   
+}
+  .h2{
+    grid-row: 1;
+    text-align: center;
+  }
+  
+  .h{
+    text-align: left;
+  }
+  
